# uac_bypass

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: GUIDE.md  TECHNICAL.md  security_notes.md  technical_details.md
include/: BypassMethods.h  CodeVirtualization.h  ComInterfaces.h  ComManager.h  Config.h  Encryption.h  ErrorHandler.h  HardwareVirtualization.h  LogManager.h  Logger.h  NamedPipeImpersonation.h  ObfuscationUtils.h  PayloadDLL.h  ProcessElevator.h  RPCElevation.h  Sandboxing.h  SecurityUtils.h  ServiceManipulation.h  SharedMemoryManager.h  TokenElevation.h  TokenStealing.h  VMDetection.h  VMXDefs.h
src/: BypassMethods.cpp  CodeVirtualization.cpp  ComManager.cpp  Encryption.cpp  ErrorHandler.cpp  HardwareVirtualization.cpp  LogManager.cpp  Logger.cpp  NamedPipeImpersonation.cpp  ObfuscationUtils.cpp  PayloadDLL.cpp  ProcessElevator.cpp  RPCElevation.cpp  Sandboxing.cpp  SecurityUtils.cpp  ServiceManipulation.cpp  SharedMemoryManager.cpp  TokenElevation.cpp  TokenStealing.cpp  UAC_Bypass.cpp  VMDetection.cpp
tests/: ErrorHandlerTests.cpp  FuzzingTests.cpp  PayloadTests.cpp  UnitTests.cpp
